# Graduation-Project

./: .env.example  .gitignore  FEATURE_ROADMAP.md  README.md  generate_business_data.py  generate_marketing_test_data.py  main.py  per_agent_models.md  pyproject.toml  requirements.txt  streamlit_app.py
Generate_Data/: generate_sample_data.py
agents/: constants.py
agents/analytics/: __init__.py  engine.py  kpi_engine.py  quality.py  schema_intel.py  timeseries.py
agents/churn/: __init__.py  agent.py  engine.py  features.py  model.py  storage.py
agents/cleaning/: __init__.py  coder.py  executor.py  planner.py  profiler.py  validator.py
agents/forecasting/: __init__.py  forecast_models.py  graph.py  (+8 more)
core/: state.py
data/: README_bloom_and_bean.md  bloom_and_bean_sales.csv  bloom_and_bean_sales_clean.csv  cafe_sales.csv  marketing_test_data.csv  sample.csv
graphs/: cleaning_graph.py  planner_graph.py
memory/: MEMORY.md  professionalization-roadmap.md  smart-analyst-project.md
models/: profiler_models.py
output/: cleaned_data.csv
pages/: 1_Data_Cleaning.py  2_Visualization.py  3_Business_Insights.py  4_Forecasting.py  4_Marketing_Agent.py  5_Marketing.py  6_Churn.py
prompts/: coder_prompt.txt  planner_prompt.txt  repair_prompt.txt
tests/: test-notebook forecasting.ipynb  test_churn.py  test_forecast_backtest.py  test_forecast_upgrades.py  test_forecast_validation.py  test_kpi_engine.py  test_marketing.py  test_quality.py  test_reporting.py  test_sandbox.py  test_schema_intel.py  test_timeseries.py
tools/: db_tools.py  profiler_tools.py  sandbox.py
(+33 files in other folders)
